--- a/solana-nft-minter/package.json
+++ b/solana-nft-minter/package.json
@@ -22,11 +22,13 @@
     "@babel/preset-env": "^7.27.2",
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
+    "@tailwindcss/postcss": "^4.1.6",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "ajv": "^8.12.0",
     "ajv-keywords": "^5.1.0",
     "assert": "^2.1.0",
+    "autoprefixer": "^10.4.21",
     "babel-loader": "^10.0.0",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
@@ -34,11 +36,14 @@
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.3",
     "path-browserify": "^1.0.1",
+    "postcss": "^8.5.3",
+    "postcss-loader": "^8.1.1",
     "process": "^0.11.10",
     "react-refresh": "^0.14.0",
     "schema-utils": "^4.0.1",
     "stream-browserify": "^3.0.0",
     "style-loader": "^4.0.0",
+    "tailwindcss": "^4.1.6",
     "typescript": "4.9.5",
     "util": "^0.12.5",
     "vm-browserify": "^1.1.2",
