--- a/solana-nft-minter/package.json
+++ b/solana-nft-minter/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@faker-js/faker": "^9.7.0",
     "@metaplex-foundation/js": "^0.19.4",
     "@solana/wallet-adapter-base": "^0.9.22",
     "@solana/wallet-adapter-react": "^0.15.32",
@@ -15,6 +16,8 @@
     "arweave": "^1.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
