--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "arweave": "^1.13.0",
+    "chart.js": "^4.4.9",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
+    "recharts": "^2.15.3",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
